[package]
name = "onchain-offchain-service"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth.workspace = true
reth-config.workspace = true
reth-node-ethereum.workspace = true
futures-util.workspace = true
reth-rpc-types.workspace = true
reth-rpc.workspace = true
reth-transaction-pool.workspace = true

# alloy

alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "410850b" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "410850b" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "410850b" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "410850b" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "410850b" }
alloy-primitives.workspace = true
alloy-rlp.workspace = true
bytes.workspace = true


# async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures.workspace = true

eyre.workspace = true